--- a/src/assets/scss/default/_animations.scss
+++ b/src/assets/scss/default/_animations.scss
@@ -15,6 +15,11 @@ Copyright (c) 2015 Daniel Eden
     animation-fill-mode: both;
 }
 
+.animated.duration-2 {
+    -webkit-animation-duration: 2s;
+    animation-duration: 2s;
+}
+
 .animated.infinite {
     -webkit-animation-iteration-count: infinite;
     animation-iteration-count: infinite;
