--- a/src/assets/scss/default/_common.scss
+++ b/src/assets/scss/default/_common.scss
@@ -547,6 +547,11 @@ nav {
     padding: 2px 16px;
 }
 
+.container-fluid {
+    padding-right: 10px;
+    padding-left: 10px;
+}
+
 .max-fit-content {
     max-width: fit-content;
 }
@@ -556,11 +561,12 @@ nav {
 }
 
 .thumb-horizontal {
-    width: 5px;
-    border-radius: 10px;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16);
-    background-color: #33d6715c;
+    position: relative;
+    display: block;
+    width: 6px;
     cursor: pointer;
+    border-radius: 10px;
+    background-color: #33d6715c;
     z-index: 999;
 }
 
