--- a/src/assets/scss/elements/_author.scss
+++ b/src/assets/scss/elements/_author.scss
@@ -6,14 +6,17 @@
     border-radius: 5px;
     padding: 20px 15px;
 }
+
 .author-wrapper {
     display: flex;
     justify-content: center;
+
     .author-inner {
         position: relative;
         display: flex;
         flex-direction: column;
         justify-content: center;
+
         .user-thumbnail {
             display: flex;
             justify-content: center;
@@ -23,22 +26,26 @@
             max-width: 170px;
             margin: auto;
         }
+
         .rn-author-info-content {
             justify-content: center;
             display: flex;
             flex-direction: column;
             text-align: center;
             margin-top: 10px;
+
             h4 {
                 &.title {
                     font-weight: 600;
                     margin-bottom: 10px;
                 }
             }
+
             .social-follw {
                 display: flex;
                 justify-content: center;
                 margin-bottom: 7px;
+
                 svg,
                 i {
                     margin-right: 10px;
@@ -47,22 +54,27 @@
                     line-height: 1.8;
                     color: var(--color-primary);
                 }
+
                 .user-name {
                     position: relative;
                     margin-top: 2px;
                 }
             }
+
             .follow-area {
                 display: flex;
                 justify-content: center;
+
                 .follow {
                     &.followers {
                         margin-right: 15px;
                     }
+
                     span {
                         color: var(--color-white);
                         font-size: 16px;
                         font-weight: 500;
+
                         a {
                             margin-left: 3px;
                         }
@@ -79,7 +91,9 @@
     display: flex;
     justify-content: center;
     margin-right: -8px;
+
     .follow-button {
+
         svg,
         i {
             position: relative;
@@ -88,6 +102,7 @@
             width: 17px !important;
         }
     }
+
     .at-follw {
         padding: 10px 13px;
         background: var(--color-primary-alta);
@@ -95,16 +110,19 @@
         transition: var(--transition);
         color: var(--color-white);
         border-radius: 5px;
+
         svg,
         i {
             font-size: 17px;
             width: 18px;
             height: auto;
         }
+
         &:hover {
             background: var(--color-primary);
             color: var(--color-white);
         }
+
         &.count {
             button {
                 &.icon {
@@ -113,8 +131,10 @@
                 }
             }
         }
+
         &:hover {
             background: var(--color-primary);
+
             svg {
                 color: var(--color-white);
             }
@@ -123,10 +143,11 @@
 }
 
 .rn-authore-profile-area {
-    .tab-content > .tab-pane {
+    .tab-content>.tab-pane {
         display: none !important;
     }
-    .tab-content > .active {
+
+    .tab-content>.active {
         display: flex !important;
     }
 }
@@ -135,6 +156,7 @@
 
 .avatar {
     position: relative;
+
     &::after,
     &::before {
         --scale: 0;
@@ -142,11 +164,11 @@
         position: absolute;
         top: -5px;
         left: 50%;
-        transform: translateX(-50%) translateY(var(--translate-y, 0))
-            scale(var(--scale));
+        transform: translateX(-50%) translateY(var(--translate-y, 0)) scale(var(--scale));
         transition: 150ms transform;
         transform-origin: bottom center;
     }
+
     &::before {
         --translate-y: calc(-100% - var(--arrow-size));
         content: attr(data-tooltip);
@@ -157,13 +179,16 @@
         border-radius: 5px;
         text-align: center;
     }
+
     &::after {
         --translate-y: calc(-1 * var(--arrow-size));
         content: "";
         border: var(--arrow-size) solid transparent;
         border-top-color: var(--color-primary-alta);
     }
+
     &:hover {
+
         &::before,
         &::after {
             --scale: 1;
@@ -175,9 +200,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
     .h2 {
         margin-bottom: 0;
     }
+
     .nice-select {
         margin: 0;
     }
@@ -192,21 +219,26 @@
         background: var(--background-color-1);
         transition: var(--transition);
         position: relative;
+
         .top-seller-wrapper {
             .thumbnail {
                 max-width: 80px;
+
                 a {
                     display: block;
                     overflow: hidden;
                     line-height: 0.6;
+
                     img {
                         transition: var(--transition);
                     }
                 }
             }
         }
+
         &:hover {
             background: var(--color-primary-alta);
+
             .top-seller-wrapper {
                 .thumbnail {
                     a {
@@ -218,9 +250,11 @@
             }
         }
     }
+
     .thumbnail {
         &.varified {
             position: relative;
+
             &::after {
                 position: absolute;
                 content: "\e92b";
@@ -255,12 +289,319 @@
     position: absolute;
     top: 0;
     bottom: 0;
-    border: 2px solid black;
     margin: auto 0;
     border-radius: 50%;
     width: 144px;
     height: 144px;
+
     span {
         border-radius: 50%;
     }
 }
+
+.auction_star {
+    width: 22px;
+    height: 22px;
+    border: 4px solid #ffbe05;
+    border-radius: 100%;
+    opacity: 1;
+    animation: customTwo 1.2s infinite;
+}
+
+.more_options {
+    position: relative;
+    z-index: 90;
+    .premium_badge {
+        position: absolute;
+        top: 0;
+        width: 18px;
+    }
+    .more_options_list {
+        opacity: 0;
+        visibility: hidden;
+        width: calc(100% + 30px);
+        height: auto;
+        position: absolute;
+        top: 44px;
+        left: -15px;
+        z-index: 90;
+        transition: 0.3s;
+        border-radius: 0 0 10px 10px;
+        background-color: var(--background-color-2);
+        border-left: 1px solid #ffffff14;
+        border-bottom: 1px solid #ffffff14;
+        border-right: 1px solid #ffffff14;
+
+        ul {
+            margin: 0;
+            padding: 10px;
+            text-align: left;
+            
+            li {
+                margin: 0;
+                padding: 4px 10px;
+                position: relative;
+                svg {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    bottom: 0;
+                    margin: auto 0;
+                }
+                span {
+                    margin-left: 8px;
+                }
+
+                &:hover {
+                    color: var(--color-primary);
+                    background: #060606b3;
+                }
+
+                span {
+                    padding: 0;
+                    border: none;
+                    color: var(--color-body);
+
+                    &.active {
+                        color: var(--color-body);
+                        background-color: var(--background-color-2);
+                    }
+
+                    &:hover {
+                        color: var(--color-primary);
+                        background-color: transparent;
+                    }
+                }
+            }
+        }
+    }
+
+    &:hover {
+        .more_options_list {
+            opacity: 1;
+            visibility: visible;
+        }
+    }
+}
+
+.walk_mode {
+    overflow: hidden;
+}
+
+.walk_thru_container {
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    overflow: hidden;
+
+    .walk_thru {
+        width: 100%;
+        height: 100%;
+    }
+
+    .walk_close {
+        position: absolute;
+        top: 50px;
+        right: 50px;
+        color: var(--color-primary);
+        cursor: pointer;
+    }
+}
+
+.author_header {
+    z-index: 99;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 20px;
+    padding: 0;
+
+    &.grid-2-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    &.grid-3-container {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    &.grid-4-container {
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    &.grid-5-container {
+        grid-template-columns: repeat(5, 1fr);
+    }
+
+    @media only screen and (max-width: 991px) {
+        grid-template-columns: repeat(3, 1fr) !important;
+    }
+
+    @media only screen and (max-width: 579px) {
+        grid-template-columns: repeat(2, 1fr) !important;
+    }
+
+    @media only screen and (max-width: 480px) {
+        grid-template-columns: repeat(1, 1fr) !important;
+    }
+}
+
+.grid-item {
+    height: fit-content;
+    user-select: none;
+    cursor: all-scroll;
+}
+
+.product-card {
+    position: relative;
+    max-width: 300px;
+    max-height: 370px;
+    min-width: 229px;
+    margin: auto;
+}
+
+.sortableHelperClass {
+    cursor: row-resize;
+}
+
+.filter_scrollbar {
+    width: 100%;
+    height: 100vh !important;
+    @media only screen and (max-width: 991px) {
+        height: 340px !important;
+    }
+}
+
+.author-explorer {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.author-container {
+    width: 100%;
+}
+
+.product-tile-effect {
+    transform-style: preserve-3d;
+    transform: perspective(100rem);
+    cursor: pointer;
+}
+
+.tile-container {
+    --rX: 0;
+    --rY: 0;
+    --bX: 50%;
+    --bY: 80%;
+    width: 100%;
+    height: 100%;
+    border-radius: 1.6rem;
+    position: relative;
+    transform: rotateX(calc(var(--rX) * 1deg)) rotateY(calc(var(--rY) * 1deg));
+    background-position: var(--bX) var(--bY);
+    background-repeat: no-repeat;
+    background-size: cover;
+    transition: transform .6s 1s;
+  }
+  
+  .tile-container--active {
+    transition: none;
+  }
+  .tile-container p {
+    color: hsl(0deg 0% 0% / 60%);
+    font-size: 2.2rem;
+  }
+  .product-tile-effect:hover .tile-container::before,
+  .product-tile-effect:hover .tile-container::after {
+    width: calc(100% - 4rem);
+    height: calc(100% - 4rem);
+  }
+
+  .tutorial-modal {
+    inset: 50% auto auto 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    width: 700px;
+    position: absolute;
+    border: 1px solid rgb(204, 204, 204);
+    background: rgb(255, 255, 255);
+    overflow: auto;
+    border-radius: 4px;
+    outline: none;
+    padding: 20px;
+  }
+
+  html[data-theme="dark"] .tutorial-modal {
+    border: 1px solid #23232a;
+    background-color: #0f0f14;
+  }
+
+  .tutorial-page {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    gap: 20px;
+  }
+
+  .tutorial-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  .btn-end-tutorial {
+    width: 120px;
+    color: white;
+    padding: 8px;
+    font-size: 16px;
+    background: var(--color-primary);
+    border-radius: 5px;
+  }
+
+  .rn-author-bg-area {
+    position: relative;
+    height: 180px;
+    margin-bottom: 10px;
+  }
+
+  .author-show-banner {
+    height: 180px;
+    transition: height 0.3s ease-in;
+  }
+
+  .author-hide-banner, .thumbnail-hide-banner {
+    height: 0px;
+    transition: height 0.3s ease-in;
+  }
+
+  .thumbnail-show-banner {
+    height: 144px;
+    transition: height 0.3s ease-in;
+  }
+
+  .btn-chevron {
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    z-index: 999;
+    color: #171721;
+    border: none;
+    width: 100px;
+  }
+
+  .author-bg-up {
+    bottom: 0;
+  }
+
+  .author-bg-down {
+    bottom: -20px;
+    color: white;
+  }
