--- a/src/assets/scss/elements/_author.scss
+++ b/src/assets/scss/elements/_author.scss
@@ -341,6 +341,9 @@
                 margin: 0;
                 padding: 4px 10px;
                 position: relative;
+                text-overflow: ellipsis;
+                overflow: hidden;
+                white-space: nowrap;
                 svg {
                     position: absolute;
                     top: 0;
@@ -384,6 +387,40 @@
     }
 }
 
+
+.view_options {
+    position: relative;
+    z-index: 90;
+    .premium_badge {
+        position: absolute;
+        top: 0;
+        width: 18px;
+    }
+    .view_options_list {
+        opacity: 0;
+        visibility: hidden;
+        width: calc(100% + 30px);
+        height: auto;
+        position: absolute;
+        top: 44px;
+        left: -15px;
+        z-index: 90;
+        transition: 0.3s;
+        border-radius: 0 0 10px 10px;
+        background-color: var(--background-color-2);
+        border-left: 1px solid #ffffff14;
+        border-bottom: 1px solid #ffffff14;
+        border-right: 1px solid #ffffff14;
+    }
+
+    &:hover {
+        .view_options_list {
+            opacity: 1;
+            visibility: visible;
+        }
+    }
+}
+
 .walk_mode {
     overflow: hidden;
 }
@@ -417,7 +454,7 @@
 
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    // grid-template-columns: repeat(4, 1fr);
     grid-gap: 20px;
     padding: 0;
 
@@ -453,14 +490,15 @@
 .grid-item {
     height: fit-content;
     user-select: none;
+    width: 100%;
     cursor: all-scroll;
 }
 
 .product-card {
     position: relative;
-    max-width: 300px;
-    max-height: 370px;
-    min-width: 229px;
+    // max-width: 300px;
+    // max-height: 370px;
+    // min-width: 229px;
     margin: auto;
 }
 
@@ -604,4 +642,8 @@
   .author-bg-down {
     bottom: -20px;
     color: white;
+  }
+
+  .view-slider {
+    cursor: pointer;
   }
