--- a/src/assets/scss/elements/_author.scss
+++ b/src/assets/scss/elements/_author.scss
@@ -453,38 +453,44 @@
 }
 
 .grid-container {
+    --grid-layout-gap: 10px;
+    --grid-column-count: 4;
+    --grid-item--min-width: 250px;
+    --gap-count: calc(var(--grid-column-count) - 1);
+    --total-gap-width: calc(var(--gap-count) * var(--grid-layout-gap));
+    --grid-item--max-width: calc((100% - var(--total-gap-width)) / var(--grid-column-count));
+
     display: grid;
-    // grid-template-columns: repeat(4, 1fr);
-    grid-gap: 20px;
-    padding: 0;
+    grid-template-columns: repeat(auto-fill, minmax(max(var(--grid-item--min-width), var(--grid-item--max-width)), 1fr));
+    grid-gap: var(--grid-layout-gap);
 
-    &.grid-2-container {
-        grid-template-columns: repeat(2, 1fr);
-    }
+    // &.grid-2-container {
+    //     grid-template-columns: repeat(2, 1fr);
+    // }
 
-    &.grid-3-container {
-        grid-template-columns: repeat(3, 1fr);
-    }
+    // &.grid-3-container {
+    //     grid-template-columns: repeat(3, 1fr);
+    // }
 
-    &.grid-4-container {
-        grid-template-columns: repeat(4, 1fr);
-    }
+    // &.grid-4-container {
+    //     grid-template-columns: repeat(4, 1fr);
+    // }
 
-    &.grid-5-container {
-        grid-template-columns: repeat(5, 1fr);
-    }
+    // &.grid-5-container {
+    //     grid-template-columns: repeat(5, 1fr);
+    // }
 
-    @media only screen and (max-width: 991px) {
-        grid-template-columns: repeat(3, 1fr) !important;
-    }
+    // @media only screen and (max-width: 991px) {
+    //     grid-template-columns: repeat(3, 1fr) !important;
+    // }
 
-    @media only screen and (max-width: 579px) {
-        grid-template-columns: repeat(2, 1fr) !important;
-    }
+    // @media only screen and (max-width: 579px) {
+    //     grid-template-columns: repeat(2, 1fr) !important;
+    // }
 
-    @media only screen and (max-width: 480px) {
-        grid-template-columns: repeat(1, 1fr) !important;
-    }
+    // @media only screen and (max-width: 480px) {
+    //     grid-template-columns: repeat(1, 1fr) !important;
+    // }
 }
 
 .grid-item {
