fix some issues in the Home page

--- a/src/assets/scss/elements/_collection.scss
+++ b/src/assets/scss/elements/_collection.scss
@@ -77,7 +77,7 @@
             }
         }
         .top-seller-content {
-            margin-left: 12px;
+            margin-left: 8px;
 
             @media #{$small-mobile} {
                 margin-left: 0;
@@ -86,11 +86,17 @@
             a {
                 h6 {
                     margin-bottom: 0;
-                    font-size: 20px;
+                    font-size: 16px;
                     font-weight: 500;
                     transition: var(--transition);
-                    @media #{$small-mobile} {
-                        font-size: 16px;
+                    @media #{$lg-layout} {
+                        font-size: 14px;
+                    }
+                    @media #{$md-layout} {
+                        font-size: 14px;
+                    }
+                    @media #{$sm-layout} {
+                        font-size: 14px;
                         margin-top: 10px;
                     }
                     &:hover {
@@ -99,7 +105,7 @@
                 }
             }
             span {
-                font-size: 14px;
+                font-size: 12px;
                 &.count-number {
                     display: block;
                 }
