change top seller fontsize

--- a/src/assets/scss/elements/_collection.scss
+++ b/src/assets/scss/elements/_collection.scss
@@ -1,3 +1,7 @@
+.title {
+    white-space: nowrap;
+}
+
 .rn-top-top-seller-area {
     h3 {
         &.title {
@@ -9,14 +13,17 @@
 .nice-selector-transparent {
     .nice-select {
         background: transparent;
+
         @media #{$md-layout} {
             position: relative;
             top: -6px;
         }
+
         @media #{$sm-layout} {
             position: relative;
             top: -8px;
         }
+
         span {
             font-size: 32px;
             font-weight: 600;
@@ -26,12 +33,14 @@
                 font-size: 24px;
             }
         }
+
         .list {
             @media #{$sm-layout} {
                 left: auto;
                 right: 0;
             }
         }
+
         &::after {
             border-bottom-color: var(--color-primary);
             border-right-color: var(--color-primary);
@@ -53,21 +62,26 @@
     .top-seller-wrapper {
         display: flex;
         align-items: center;
+
         @media #{$small-mobile} {
             flex-direction: column;
             text-align: center;
         }
+
         .thumbnail {
             max-width: 60px;
+
             @media #{$small-mobile} {
                 margin-bottom: 5px;
             }
+
             a {
                 display: block;
                 border-radius: 50%;
                 line-height: 0.7;
                 overflow: hidden;
                 border: 3px solid var(--color-border) !important;
+
                 img {
                     transition: 0.3s;
                     border-radius: 100%;
@@ -76,6 +90,7 @@
                 }
             }
         }
+
         .top-seller-content {
             margin-left: 8px;
 
@@ -89,26 +104,33 @@
                     font-size: 16px;
                     font-weight: 500;
                     transition: var(--transition);
+
                     @media #{$lg-layout} {
                         font-size: 14px;
                     }
+
                     @media #{$md-layout} {
                         font-size: 14px;
                     }
+
                     @media #{$sm-layout} {
                         font-size: 14px;
                         margin-top: 10px;
                     }
+
                     &:hover {
                         color: var(--color-primary);
                     }
                 }
             }
+
             span {
                 font-size: 12px;
+
                 &.count-number {
                     display: block;
                 }
+
                 a {
                     margin-left: 7px;
                     text-transform: capitalize;
@@ -134,9 +156,11 @@
         padding: 18px;
         background: var(--background-color-1);
         border-radius: 5px;
+
         .collection-big-thumbnail {
             overflow: hidden;
             border-radius: 5px;
+
             img {
                 border-radius: 5px;
                 object-fit: cover;
@@ -145,19 +169,22 @@
                 transition: var(--transition);
             }
         }
+
         .collenction-small-thumbnail {
             display: flex;
             justify-content: space-between;
             margin-left: -4px;
             margin-left: -4px;
             margin-top: 4px;
-            & > div {
+
+            &>div {
                 display: inline-block;
                 width: 33.33%;
                 padding: 4px;
                 line-height: 1;
                 margin-bottom: -4px;
             }
+
             img {
                 border-radius: 10px;
             }
@@ -196,6 +223,7 @@
             @media #{$small-mobile} {
                 top: 53%;
             }
+
             img {
                 border-radius: 50% !important;
             }
@@ -245,9 +273,11 @@
 
 .creator-list-wrapper {
     counter-reset: rn-list-counter;
+
     .creator-single {
         counter-increment: rn-list-counter;
         position: relative;
+
         &::before {
             content: counter(rn-list-counter);
             font-weight: 700;
@@ -267,9 +297,11 @@
 
 .top-seller-list-wrapper {
     counter-reset: rn-list-counter;
+
     .top-seller-list {
         counter-increment: rn-list-counter;
         position: relative;
+
         &::before {
             content: counter(rn-list-counter);
             font-weight: 700;
@@ -284,11 +316,13 @@
             top: 50%;
             transform: translateY(-50%);
             transition: 0.4s;
+
             @media #{$small-mobile} {
                 font-size: 40px;
                 right: 0;
             }
         }
+
         &:hover {
             &::before {
                 font-size: 45px;
