add chatting feature

--- a/src/assets/scss/default/_common.scss
+++ b/src/assets/scss/default/_common.scss
@@ -1,5 +1,10 @@
 body {
     scroll-behavior: auto;
+    min-height: 100vh;
+}
+
+#main-content {
+    min-height: calc(100vh - 160px);
 }
 
 // header sticky
@@ -47,6 +52,10 @@ textarea {
         border-radius: 5px;
         box-shadow: none !important;
     }
+}
+
+img {
+    max-width: 100%;
 }
 
 .attachment {
