--- a/src/assets/scss/elements/_message.scss
+++ b/src/assets/scss/elements/_message.scss
@@ -1,16 +1,16 @@
 .home {
     display: grid;
     place-items: center;
-    height: 100vh;
+    height: calc(100vh - 136px);
     position: relative;
 }
 
 .home-components {
     display: flex;
-    height: 90vh;
+    height: calc(100vh - 160px);
     width: 80vw;
     position: absolute;
-    top: 0;
+    // top: 0;
     bottom: 0;
     left: 0;
     right: 0;
@@ -41,9 +41,10 @@
 
 .add-chatroom-icon {
     position: absolute;
-    top: 6%;
+    top: 4.5%;
     left: 85%;
     z-index: 10;
+
     button {
         width: 50px;
         height: 50px;
@@ -185,6 +186,7 @@
     font-size: 18px !important;
     background-color: #242435 !important;
     color: white;
+
     &::placeholder {
         color: var(--color-body) !important;
     }
@@ -204,6 +206,7 @@
 .chatroom-footer-lefticons {
     display: flex;
     flex-direction: row;
+
     button {
         width: 50px;
         height: 50px;
@@ -212,7 +215,7 @@
 }
 
 .send-icon {
-    color: #316af3;
+    color: var(--color-primary);
 }
 
 @media screen and (max-width:768px) {
@@ -253,9 +256,11 @@
     // max-height: 30px;
     position: relative;
     border-bottom: 0.1px solid var(--color-border);
+
     button {
         width: 50px;
         height: 50px;
+
         img {
             max-width: 100%;
         }
@@ -294,6 +299,7 @@
     margin-right: 25px;
     background-color: transparent;
     color: white;
+
     &::placeholder {
         color: var(--color-body);
     }
@@ -414,6 +420,7 @@
     margin-left: auto;
     background-color: white;
     color: black;
+
     &::placeholder {
         color: var(--color-body) !important;
     }
